// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiGlobalToastList is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-live="polite"
  class="euiGlobalToastList testClass1 testClass2 emotion-euiGlobalToastList-right-euiTestCss"
  data-test-subj="test subject string"
  role="log"
/>
`;

exports[`EuiGlobalToastList props side can be changed to left 1`] = `
<div
  aria-live="polite"
  class="euiGlobalToastList emotion-euiGlobalToastList-left"
  role="log"
>
  <div
    class="css-19mjubd-content"
  >
    <div
      class="euiToast euiGlobalToastListItem emotion-euiToast-euiGlobalToastListItem"
      data-test-subj="a"
      id="a"
      style="--euiToastTypeColor: #008A5E; --euiToastTypeBackgroundColor: #C9F3E3; --euiToastAnimationMs: 5ms;"
    >
      <div
        class="euiToastDecor css-1glsluj-decor-hasAnimation"
        role="presentation"
      />
      <p
        class="emotion-euiScreenReaderOnly"
      >
        A new notification appears
      </p>
      <div
        class="css-p34pdn-wrapper"
      >
        <div
          class="css-m4ni6e-body"
        >
          <span
            aria-hidden="true"
            class="css-5neova-icon-l-icon"
            color="#008A5E"
            data-euiicon-type="check"
          />
          <div
            class="css-1nzpgtc-content"
            data-test-subj="euiToastBody"
          >
            <p
              class="euiTitle emotion-euiTitle-xs-euiToastHeader-hasDismissButton"
              data-test-subj="euiToastHeader__title"
            >
              A
            </p>
            <button
              aria-label="Dismiss toast"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text-dismissButton"
              data-test-subj="toastCloseButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="cross"
              />
            </button>
            <div
              class="euiText euiToast__text emotion-euiText-s-euiTextColor-default"
              data-test-subj="euiToastText"
            >
              a
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiToast euiGlobalToastListItem emotion-euiToast-euiGlobalToastListItem"
      data-test-subj="b"
      id="b"
      style="--euiToastTypeColor: #C61E25; --euiToastTypeBackgroundColor: #FDDDD8; --euiToastAnimationMs: 5ms;"
    >
      <div
        class="euiToastDecor css-1glsluj-decor-hasAnimation"
        role="presentation"
      />
      <p
        class="emotion-euiScreenReaderOnly"
      >
        A new notification appears
      </p>
      <div
        class="css-p34pdn-wrapper"
      >
        <div
          class="css-m4ni6e-body"
        >
          <span
            aria-hidden="true"
            class="css-5neova-icon-l-icon"
            color="#C61E25"
            data-euiicon-type="warning"
          />
          <div
            class="css-1nzpgtc-content"
            data-test-subj="euiToastBody"
          >
            <p
              class="euiTitle emotion-euiTitle-xs-euiToastHeader-hasDismissButton"
              data-test-subj="euiToastHeader__title"
            >
              B
            </p>
            <button
              aria-label="Dismiss toast"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text-dismissButton"
              data-test-subj="toastCloseButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="cross"
              />
            </button>
            <div
              class="euiText euiToast__text emotion-euiText-s-euiTextColor-default"
              data-test-subj="euiToastText"
            >
              b
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiGlobalToastList props toasts is rendered 1`] = `
<div
  aria-live="polite"
  class="euiGlobalToastList emotion-euiGlobalToastList-right"
  role="log"
>
  <div
    class="css-19mjubd-content"
  >
    <div
      class="euiToast euiGlobalToastListItem emotion-euiToast-euiGlobalToastListItem"
      data-test-subj="a"
      id="a"
      style="--euiToastTypeColor: #008A5E; --euiToastTypeBackgroundColor: #C9F3E3; --euiToastAnimationMs: 5ms;"
    >
      <div
        class="euiToastDecor css-1glsluj-decor-hasAnimation"
        role="presentation"
      />
      <p
        class="emotion-euiScreenReaderOnly"
      >
        A new notification appears
      </p>
      <div
        class="css-p34pdn-wrapper"
      >
        <div
          class="css-m4ni6e-body"
        >
          <span
            aria-hidden="true"
            class="css-5neova-icon-l-icon"
            color="#008A5E"
            data-euiicon-type="check"
          />
          <div
            class="css-1nzpgtc-content"
            data-test-subj="euiToastBody"
          >
            <p
              class="euiTitle emotion-euiTitle-xs-euiToastHeader-hasDismissButton"
              data-test-subj="euiToastHeader__title"
            >
              A
            </p>
            <button
              aria-label="Dismiss toast"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text-dismissButton"
              data-test-subj="toastCloseButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="cross"
              />
            </button>
            <div
              class="euiText euiToast__text emotion-euiText-s-euiTextColor-default"
              data-test-subj="euiToastText"
            >
              a
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiToast euiGlobalToastListItem emotion-euiToast-euiGlobalToastListItem"
      data-test-subj="b"
      id="b"
      style="--euiToastTypeColor: #C61E25; --euiToastTypeBackgroundColor: #FDDDD8; --euiToastAnimationMs: 5ms;"
    >
      <div
        class="euiToastDecor css-1glsluj-decor-hasAnimation"
        role="presentation"
      />
      <p
        class="emotion-euiScreenReaderOnly"
      >
        A new notification appears
      </p>
      <div
        class="css-p34pdn-wrapper"
      >
        <div
          class="css-m4ni6e-body"
        >
          <span
            aria-hidden="true"
            class="css-5neova-icon-l-icon"
            color="#C61E25"
            data-euiicon-type="warning"
          />
          <div
            class="css-1nzpgtc-content"
            data-test-subj="euiToastBody"
          >
            <p
              class="euiTitle emotion-euiTitle-xs-euiToastHeader-hasDismissButton"
              data-test-subj="euiToastHeader__title"
            >
              B
            </p>
            <button
              aria-label="Dismiss toast"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text-dismissButton"
              data-test-subj="toastCloseButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="cross"
              />
            </button>
            <div
              class="euiText euiToast__text emotion-euiText-s-euiTextColor-default"
              data-test-subj="euiToastText"
            >
              b
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
